<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hekangping\'s App</string>
    <string name="hello">Welcome</string>
    <string name="username_tip">username</string>
    <string name="password_tip">password</string>
    <string name="phone_text">Phonenumber</string>
    <string name="call_text">Call</string>
    <string name="loginbutton_text">Login</string>
    <string name="loading_text">Loading</string>
    <string name="action_settings">Settings</string>
    <string name="secondpage">123465</string>
    <string name="backBtn">Back</string>
    <string name="quitBtn">LogOut</string>
    <string name="backText">Back</string>
    <string name="emptyListText">No data found.</string>
    <string name="columnTitleId">ID</string>
    <string name="columnTitleText">TEXT</string>
    <string name="logouttip">Do you want to logout?</string>
    <string name="backtip">Do you want to go back to login page?\nCurrent list data will lost.</string>
    <string name="ensure">Yes</string>
    <string name="cancle">No</string>
    <string name="clearContent">Clear input</string>
    <string name="errMsg">Sorry,Application is exit with Exception.</string>
    <string name="loading_data">Preparing data...</string>
    <string name="username_null">Please input username</string>
    <string name="username_err">Invalid username</string>
    <string name="password_null">Please input password</string>
    <string name="password_err">Password wrong</string>
    <string name="quit_menu_text">Quit</string>
    <string name="network_disabled">Network disabled</string>
    <string name="network_connect_failed">Connection failed,please check NetWork settings</string>
    <string name="network_setting_title">NetworkConfig</string>
    <string name="network_setting_message">Network disabled,change settings?</string>
    <string name="preference_default_username_title">default userName</string>
    <string name="preference_default_username_summary">Setting default username to login</string>
    <string name="preference_default_psw_title">password</string>
    <string name="preference_default_psw_summary">default user\'s password</string>
    <string name="preference_default_data_title">Data URL</string>
    <string name="preference_default_data_summary">default fetch data by http://exam.szcomtop.com/mobile/list.ac</string>
    <string name="preference_lazyload_data_title">Lazy-loading data</string>
    <string name="preference_lazyload_data_summary">Lazy-loading Data request URL</string>
    <string name="copyright">Copyright Hekangping.org 2014\nAll Rights Reserved.</string>

</resources>