<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#cccccc"
    android:gravity="center_horizontal"
    android:paddingTop="50dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context="org.hekangping.easypic.MainActivity" >

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/hello"
        android:textColor="#FF0000"
        android:textSize="30sp" />

    <!-- <EditText -->
    <!-- android:id="@+id/username_text" -->
    <!-- android:layout_width="fill_parent" -->
    <!-- android:layout_height="wrap_content" -->
    <!-- android:layout_below="@id/text1" -->
    <!-- android:layout_centerHorizontal="true" -->
    <!-- android:layout_marginBottom="10dp" -->
    <!-- android:hint="@string/username_tip" -->
    <!-- android:singleLine="true" /> -->

    <org.hekangping.easypic.EditCancel
        android:id="@+id/username_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:hint="@string/username_tip"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username_text"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:background="@android:drawable/edit_text"
        android:hint="@string/password_tip"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/loginbutton_text"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="20" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_below="@id/password_text"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:text="@string/loginbutton_text" />
    
    <TextView
        android:id="@+id/text2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginBtn"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:ellipsize="marquee"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:marqueeRepeatLimit="marquee_forever"
        android:text="@string/copyright"
        android:textColor="#000000"
        android:textSize="15sp" />
    

</RelativeLayout>