<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCCCC"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stretchColumns="1" >

        <TableRow>

            <Button
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="3dip"
                android:layout_marginTop="3dp"
                android:background="@drawable/button"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/backBtn"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/secondtext"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:ellipsize="end"
                android:gravity="center"
                android:text="@string/secondpage"
                android:textSize="18sp" />

            <Button
                android:id="@+id/quitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="3dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="3dp"
                android:background="@drawable/button"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/quitBtn"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/columnTitleId"
                android:textSize="16sp" />

            <View
                android:layout_width="1px"
                android:layout_height="fill_parent"
                android:background="#000000" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/columnTitleText"
                android:textSize="16sp" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="top"
            android:orientation="vertical" >

            <!-- ListView控件 -->

            <ListView
                android:id="@id/android:list"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:dividerHeight="1dp"
                android:fastScrollEnabled="true" />

            <!-- ListView控件为空时显示   目前控制不好 -->

            <TextView
                android:id="@id/android:empty"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/emptyListText"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>