<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#CCCCCC"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#CCCCCC"
        android:gravity="left"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="3dip"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button"
            android:paddingBottom="8dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="8dp"
            android:text="@string/backBtn"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#CCCCCC"
        android:gravity="center_vertical|right"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/secondtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondpage"
            android:gravity="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/quitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="3dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="5dp"
            android:background="@drawable/button"
            android:paddingBottom="8dp"
            android:paddingLeft="25dp"
            android:paddingRight="25dp"
            android:paddingTop="8dp"
            android:text="@string/quitBtn"
            android:textColor="@color/white"
            android:textSize="18sp" />
        
    </LinearLayout>

</LinearLayout>